--- a/CV.html
+++ b/CV.html
@@ -17,7 +17,7 @@
 	
 		<h1>Minitsonga</h1>
 	
-		<p class="entete">Etudiant en Terminal S, a la recherche d'écoles supérieurs dans la programmation (Site web, mobile, jeux vidéo, logiciels).</p>
+		<p class="entete">Etudiant en Terminal S, à la recherche d'écoles supérieurs dans la programmation (Site web, mobile, jeux vidéo, logiciels).</p>
 	
 		
 	</div>
